# recipes

./: README.md
python/azure_ai_search_client/: README.md  pyproject.toml  requirements.txt
python/eventgrid_functions/: README.md  function_app.py
python/handson_rag_apps/: README.md  pyproject.toml  settings.env.sample
python/handson_rag_apps/data/: documents.csv
python/handson_rag_apps/scripts/: azure_ai_search.py  azure_openai_service.py  bing_search.py
python/rotate-apim-subscription-key/: README.md  main.py  pyproject.toml  settings.env.sample
scenarios/eventgrid_functions/: function_app.py
scenarios/handson_aks/: README.md
scenarios/handson_assistants_api/: README.md  main.py  pyproject.toml
scenarios/handson_eventhubs/: README.md  main.py  pyproject.toml  settings.env.sample
scenarios/handson_iot_hub/: README.md  main.py  pyproject.toml  settings.env.sample
scenarios/handson_line_api/: README.md  fastapi_app.py  main.py  pyproject.toml  settings.env.sample
scenarios/handson_microsoft_search/: README.md  main.py  pyproject.toml
scenarios/handson_promptflow/: .env.example  .gitignore  README.md  flow.py  pyproject.toml
scenarios/handson_rag_apps/: README.ja.md  README.md  pyproject.toml  settings.env.sample
scenarios/handson_rag_apps/scripts/: azure_ai_search.py  azure_openai_service.py  bing_search.py
scenarios/handson_slack_api/: README.md
scenarios/iot_device_provisioning/: README.md  main.py  pyproject.toml  settings.env.sample
scenarios/private_network_app/: README.md
scenarios/rotate_apim_subscription_key/: pyproject.toml
scenarios/scrapy_app/: README.md
scenarios/scrapy_app/scrapy_app/spiders/: visasq.py
scenarios/simple_react_app/: .env  README.md  package-lock.json  package.json
scenarios/simple_react_app/src/: App.tsx  authConfig.ts  main.tsx  vite-env.d.ts
scenarios/simple_react_app/src/components/: Products.tsx  SignInSignOutButton.tsx  TodoList.tsx  index.ts
scenarios/simple_react_app/src/data/: earringsProductsMaster.ts  sneakersProductsMaster.ts
scenarios/simple_react_app/src/layouts/: PageFooter.tsx  PageHeader.tsx
scenarios/simple_react_app/src/utils/: MsGraphApi.ts
scenarios/simple_scraper/: .gitignore  README.md  main.py  pyproject.toml  settings.env.sample
scenarios/vision_processor/: README.md  main.py  pyproject.toml  requirements.txt
