[tool.poetry]
name = "rotate_apim_subscription_key"
version = "0.0.1"
description = "Rotate subscription keys on API Management"
authors = ["ks6088ts <ks6088ts@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
python-dotenv = "^1.0.1"
azure-identity = "^1.16.1"
azure-mgmt-apimanagement = "^4.0.0"
azure-keyvault-secrets = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
